styles.css
/* animation */

@keyframes flickerAnimation {
  0%   { opacity:0; }
  50%  { opacity:1; }
  100% { opacity:0.7; }
}

.animate-flicker {
  animation: flickerAnimation 0.3s 4;
}

@keyframes shift {
	0%, 20%, 100%  { margin-top: 0; }
	25%, 45% { margin-top: -21px; }
	50%, 70% { margin-top: -42px; }
	75%, 95% { margin-top: -63px; }
	99.999% { margin-top: -84px; }
}

/* others */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

#navbar {
  background-color: #333;
  position: fixed;
  top: -50px;
  width: 100%;
  transition: top 0.3s;
  z-index: 4;
  opacity: 0.9;
  display: none;
}

#navbar a {
  float: left;
  display: block;
  color: #FFFFFF;
  text-align: center;
  padding: 15px;
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
}

#navbar a:hover {
  background-color: #6497B1;
  color: #000000;
}

a {
  text-decoration: none;
}

.section {
  width: 100%;
  display: flex;
}

.main {
  height: 100vh;
  background: url(images/main.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  position: relative;
}

.main-content,
.about-title-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  text-align: center;
  color: #FFFFFF;
}

h1 {
  font-family: 'Ubuntu', sans-serif;
  margin-bottom: 0.25em;
}

.main-content h1 {
  font-size: 80px;
}

.main-content h2 {
  font-size: 40px;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 1em;
}

nav ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

li {
  list-style-type: none;
}

nav li {
  width: 50%;
  padding: 0.5em;
}

.nav-item {
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  color: #FFFFFF;
  font-weight: 700;
  opacity: 0.7;
}

.nav-item:hover {
  opacity: 1;
}

.social-logo ul {
  display: flex;
  justify-content: center;

  position: absolute;
  bottom: 50px;

  width: 100%;
}

.social-logo ul li {
  margin-right: 20px;
  opacity: 70%;
}

.social-logo ul li:last-of-type {
  margin-right: 0;
}

.social-logo ul li:hover,
.button:hover {
  opacity: 1;
}

.about-title {
  background-color: #03396C;
  display: block;
  height: 100vh;
  position: relative;
}

.profile-picture {
  border-radius: 50%;
  width: 300px;
  display: block;
}

.button {
  display: inline-block;
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  font-weight: 700;
  opacity: 0.7;
  letter-spacing: 2px;
  border: 3px solid #FFFFFF;
  padding: 10px;
  margin-top: 3em;
  color: #FFFFFF;
}

.about {
  display: block;
  background-color: #FFFFFF;
}

.about-content {
  padding: 50px;
}

.about-content {
  color: #011F4B;
  font-family: 'Raleway', sans-serif;
}

.about-content h1 {
  font-size: 22px;
  margin-bottom: 2em;
}

.about-content h2 {
  font-size: 16px;
}

.about-content p {
  font-size: 16px;
  margin-bottom: 1.5em;
  max-width: 800px;
}

.word-carousel {
  display: flex;
  margin-bottom: 1.5em;
}

.intro {
  margin-right: 5px;
}

.word-carousel .content {
  overflow: hidden;
  height: 21px;
}

.word-carousel .inner-content {
  animation-name: shift;
  animation-duration: 10s;
  animation-iteration-count: infinite;
}

.word-carousel p {
  margin-bottom: 2px;
}

.about-subsection {
  margin-bottom: 6em;
}

.about-subsection:last-of-type {
  margin-bottom: 0;
}

.skills {
  display: flex;
  flex-wrap: wrap;
}

.skill-section {
  width: 100%;
  margin-bottom: 30px;

  text-align: center;
}

.skill-section:last-of-type {
  margin-bottom: 0;
}

.skill-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 20px;
}

.icon-container {
  margin: 0 5px;
}

.icon-container p {
  font-size: 12px;
}

.icon {
  width: 50px;
  margin: 10px;
}

.blog {
  background-color: #B3CDE0;
}

.blog-content {
  background-color: white;
  margin: 30px 15px;
  padding: 30px;
  width: 100%;

  text-align: center;
  font-family: 'Raleway', sans-serif;

  filter: drop-shadow(0 0 10px #0003);
}

.blog-content h1 {
  font-size: 30px;
  color: #6497B1;
  font-weight: 400;
  letter-spacing: 3px;
  margin-bottom: 1em;
}

.projects-content h1 {
  font-size: 40px;
  font-weight: 700;
  margin-bottom: 0.25em;
}

.projects-content p {
  font-size: 20px;
  margin-bottom: 0;
}

.projects-content a {
  color: #03396C;
  font-weight: 700;
  opacity: 0.7;
}

.projects-content a:hover {
  opacity: 1;
}

.projects-content {
  width: 100%;
  color:  #03396C;
  font-family: 'Raleway', sans-serif;
  text-align: center;
  margin-top: 30px;
}

.blog-content .button {
  color:  #6497B1;
  border-color: #6497B1;
  display: block;
  margin-top: 2em;
}

.calvin-image {
  display: none;
  z-index: 3;
  position: absolute;
  right: -90px;
  top: -50px;
}

.projects {
  background-color: #B3CDE0;
  position: relative;
  z-index: 2;
}

.carousel {
  margin: 20px auto 50px auto;
  width: 100%;
  min-height: 300px;
  background-color: #FFFFFF;
  position: relative;
}

.contact-content {
  text-align: center;
  font-family: 'Raleway', sans-serif;
  color: #FFFFFF;
  font-size: 30px;
}

.projects {
  position: relative;
}

footer {
  background-color: #011F4B;
}

.contact-content {
  padding: 50px;
  text-align: center;
  display: block;
  width: 100%;
}

.contact-content h1 {
  font-size: 30px;
  margin-bottom: 1em;
}

.contact-content p {
  font-size: 20px;
  margin-bottom: 3em;
}

.contact-content p {
  font-size: 20px;
  margin-bottom: 1em;
}

.contact-content a {
  color: #FFFFFF;
  opacity: 0.7;
}

.contact-content a:hover {
  opacity: 1;
}

@media only screen and (min-width: 650px) {
  .carousel {
    height: 500px;
  }

  #navbar {
    display: block;
  }

  nav li {
    width: 100%;
  }
}

@media only screen and (min-width: 961px) {

  .main-content {
    width: 960px;
  }

  .main-content h1 {
    font-size: 100px;
  }

  .main-content h2 {
    font-size: 50px;
  }

  .nav-item {
    font-size: 30px;
  }

  nav li {
    width: 25%;  
  }

  .about-title {
    width: 50%;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1;
  }

  .about {
    width: 50vw;
    float:right;
    right: 0;
  }

  .blog-content {
    width: 800px;
    margin: 60px auto;
    position: relative;
    padding: 60px;
  }

  .blog-content h1,
  .projects-content h1 {
    font-size: 50px;
  }

  .blog-content p,
  .projects-content p {
    font-size: 20px;
    margin-left: 50px;
    margin-right: 50px;
  }

  .blog-content .button {
    margin-left: 50px;
    margin-right: 50px;
  }

  .calvin-image {
    display: inline;
  }

  .carousel {
    width: 800px;
    padding: 30px;
  }

}

